Validations and signup conflict resolved

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/USER-MANAGEMENT-SYSTEM
+# MONGO_URI=mongodb://localhost:27017/USER-MANAGEMENT-SYSTEM
 JWT_SECRET=your_jwt_secret
